<resources>
    <string name="app_name">Android Architecture</string>
    <string name="no_connection">No connection</string>
    <string name="add">Add</string>
    <string name="add_expense">Add expense</string>
    <string name="add_income">Add income</string>
    <string name="description">Description</string>
    <string name="sync">Sync</string>
    <string name="save">Save</string>
    <string name="title">Title</string>
    <string name="create">Create</string>
    <string name="costs">Costs</string>
    <string name="field_is_mandatory">Field is mandatory</string>
</resources>