<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="12dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/sheet_cv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                app:cardCornerRadius="4dp"
                app:cardElevation="4dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/image"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_income_24" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/title_layout"
                        style="@style/AppTheme.TextInputLayoutPrimary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:hint="@string/title"
                        app:errorEnabled="true"
                        app:layout_constraintTop_toBottomOf="@id/image">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center|start" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/description_layout"
                        style="@style/AppTheme.TextInputLayoutPrimary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/description"
                        app:errorEnabled="true"
                        app:layout_constraintTop_toBottomOf="@id/title_layout">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/description"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center|start"
                            android:lines="3" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/costs_layout"
                        style="@style/AppTheme.TextInputLayoutPrimary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/costs"
                        app:errorEnabled="true"
                        app:layout_constraintTop_toBottomOf="@id/description_layout">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/costs"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center|start"
                            android:inputType="numberDecimal"
                            android:lines="1" />

                    </com.google.android.material.textfield.TextInputLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/add_new_financial_element_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:text="@string/create"
        app:backgroundTint="@color/colorAccent"
        app:fabSize="normal"
        app:icon="@drawable/ic_save_24" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
