<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="12dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/sheet_cv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                app:cardCornerRadius="4dp"
                app:cardElevation="4dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/title_layout"
                        style="@style/AppTheme.TextInputLayoutPrimary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Title"
                        app:errorEnabled="true"
                        app:layout_constraintTop_toTopOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:enabled="false"
                            android:gravity="center|start" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/description_layout"
                        style="@style/AppTheme.TextInputLayoutPrimary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/description"
                        app:errorEnabled="true"
                        app:layout_constraintTop_toBottomOf="@id/title_layout">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/description"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:enabled="false"
                            android:gravity="center|start"
                            android:lines="3" />

                    </com.google.android.material.textfield.TextInputLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/add_income_btn"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:backgroundTint="@color/colorAccent"
                android:text="@string/add_income"
                android:textColor="@color/black"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sheet_cv" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/add_expense_btn"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:backgroundTint="@color/colorAccent"
                android:text="@string/add_expense"
                android:textColor="@color/black"
                app:layout_constraintLeft_toRightOf="@id/add_income_btn"
                app:layout_constraintTop_toBottomOf="@id/sheet_cv" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/financial_elements_rv"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:overScrollMode="never"
                app:layout_constraintTop_toBottomOf="@id/add_income_btn"
                tools:itemCount="7"
                tools:listitem="@layout/item_financial_element" />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
